# internal/models/error.go
@@ -1,7 +1,7 @@
-package swagger
+package models
 
 // Error struct
 type Error struct {
 	Code  int    `json:"code"`
 	Error string `json:"error"`
-} //@name ErrorResponse
+}
